# Hy2DL

./: .gitattributes  .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: main.yml
ERA5_Land_Processing/: clip_netcdf_to_shapefile.py  preprocess_era5.ipynb
Hy2DL/aux_functions/: functions_aux.py  functions_datasets.py  functions_evaluation.py  functions_training.py
Hy2DL/conceptual_models/: calibration_methods.py  conceptualmodel_postprocess.ipynb  evaluation_metrics.py  experiment_camels_de.py  experiment_camels_gb.py  experiment_camels_us.py  hydrological_models.py  modelcalibration.py  modelcalibration_camelsde.py  modelcalibration_camelsgb.py  modelcalibration_camelsus.py  optimization_methods.py  spotpy_calibration.py
Hy2DL/datasetzoo/: basedataset.py  camelsch.py  (+4 more)
LSTM/: LSTM_CAMELS_GB.ipynb  LSTM_CAMELS_US.ipynb
Model_Conceptual/: Bucket_gd.ipynb  Bucket_spotpy_dream.ipynb  Bucket_spotpy_sce.ipynb  NonSense_gd.ipynb  NonSense_spotpy_dream.ipynb  NonSense_spotpy_sce.ipynb  SHM_gd.ipynb  SHM_posprocess.ipynb  SHM_spotpy_dream.ipynb  SHM_spotpy_sce.ipynb
Model_DataDriven/: Regional_LSTM.ipynb
Model_Hybrid/: LSTM_Bucket.ipynb  LSTM_NonSense.ipynb  LSTM_SHM.ipynb
aux_functions/: functions_datasets.py  functions_loss.py  functions_training.py
conceptual_models/: SHM_postprocess.ipynb  hydrological_models.py  spotpy_calibration.py
hybrid/: LSTM_Bucket.ipynb  LSTM_ConceptualModel.ipynb  LSTM_NonSense.ipynb  LSTM_SHM.ipynb  hydrological_models.py
results/: README.md  Results_Analysis.ipynb  result_analysis.ipynb
(+1242 files in other folders)
